--- a/docs/integrations/vector_db/chroma.mdx
+++ b/docs/integrations/vector_db/chroma.mdx
@@ -10,7 +10,7 @@ You can use UpTrain along with vector databases such as ChromaDB for evaluations
 
 ### How to integrate?
 
-First let's import the necessary packages
+First, let's import the necessary packages
 
 ```python
 from uptrain import EvalLLM, Evals, APIClient
