--- a/docs/integrations/vector_db/faiss.mdx
+++ b/docs/integrations/vector_db/faiss.mdx
@@ -10,7 +10,7 @@ You can use UpTrain along with FAISS for evaluations such as the relevance of th
 
 ### How to integrate?
 
-First let's import the necessary packages
+First, let's import the necessary packages
 
 ```python
 from uptrain import EvalLLM, Evals
