integration docs improvement

--- a/docs/integrations/llm_providers/anyscale.mdx
+++ b/docs/integrations/llm_providers/anyscale.mdx
@@ -18,7 +18,8 @@ First, let's import the necessary packages and define Anyscale API Key
 from uptrain import EvalLLM, Evals, Settings
 import json
 
-ANYSCALE_API_KEY = "esecret_***********************"  # Insert your Anyscale API key here
+# Insert your Anyscale API key here
+ANYSCALE_API_KEY = "esecret_***********************"  
 
 settings = Settings(model='anyscale/mistralai/Mistral-7B-Instruct-v0.1', anyscale_api_key=ANYSCALE_API_KEY)
 ```
