--- a/docs/integrations/vector_db/faiss.mdx
+++ b/docs/integrations/vector_db/faiss.mdx
@@ -126,13 +126,13 @@ Let's look at the retrieval quality of the context documents
 ```
 
 According to these evaluations:
-1. The first document has context relevant to the question, as it contains information about a book which is related to alien abductions, thus resulting in a good context relevance score.
-2. The second document contains information about a book which is related to abduction of a princess but not related to alien abductions, thus resulting in a good context relevance score. 
+* **Example 1**: The context contains information about a book "A Gift From The Stars", which is related to the question asked i.e. books about alien abductions.
+* **Example 2**: The context contains information about a book "The Royal Abduction", which is related to a abduction but there is no reference specific to alien abduction, making the context irrelevant.
 
 <CardGroup cols={2}>
   <Card
     title="Tutorial"
-    href="https://github.com/uptrain-ai/uptrain/blob/main/examples/integrations/vector_db/faiss.ipynb"
+    href="https://github.com/uptrain-ai/uptrain/blob/main/examples/integrations/vector_db/FAISS.ipynb"
     icon="github"
     color="#808080"
   >
