--- a/docs/predefined-evaluations/custom-evals/custom-guideline.mdx
+++ b/docs/predefined-evaluations/custom-evals/custom-guideline.mdx
@@ -37,7 +37,7 @@ res = eval_llm.evaluate(
     checks = [GuidelineAdherence(guideline=guideline, guideline_name="No Numbers")]
 )
 ```
-<Info>By Default we are using GPT 3.5 Turbo. If you want to use some other model check out this [tutorial](https://github.com/uptrain-ai/uptrain/blob/main/examples/open_source_evaluator_tutorial.ipynb)</Info>
+<Info>By default, we are using GPT 3.5 Turbo for evaluations. If you want to use a different model, check out this [tutorial](https://github.com/uptrain-ai/uptrain/blob/main/examples/open_source_evaluator_tutorial.ipynb).</Info>
 
 Sample Response:
 ```json
