--- a/docs/predefined-evaluations/language-quality/tonality.mdx
+++ b/docs/predefined-evaluations/language-quality/tonality.mdx
@@ -1,6 +1,6 @@
 ---
 title: Tonality
-description: Grades whether the generated response matches the required persona's tone 
+description: Evaluates whether the generated response matches the required persona's tone 
 ---
 
 Tonality Score evaluates the response in terms of the tone used when following or deviating from standard guidelines. 
@@ -31,7 +31,7 @@ res = eval_llm.evaluate(
     checks = [CritiqueTone(llm_persona=persona)]
 )
 ```
-<Info>By Default we are using GPT 3.5 Turbo. If you want to use some other model check out this [tutorial](https://github.com/uptrain-ai/uptrain/blob/main/examples/open_source_evaluator_tutorial.ipynb)</Info>
+<Info>By default, we are using GPT 3.5 Turbo for evaluations. If you want to use a different model, check out this [tutorial](https://github.com/uptrain-ai/uptrain/blob/main/examples/open_source_evaluator_tutorial.ipynb).</Info>
 
 Sample Response:
 ```json
