--- a/docs/tutorials/analyzing-failure-cases.mdx
+++ b/docs/tutorials/analyzing-failure-cases.mdx
@@ -38,7 +38,7 @@ res = uptrain_client.perform_root_cause_analysis(
 
 print(json.dumps(res,indent=3))
 ```
-<Info>You can get your UpTrain key [here](https://uptrain.ai/)</Info>
+<Info>You can get your UpTrain key [here](https://uptrain.ai/).</Info>
 
 Sample Response:
 ```json
