--- a/docs/predefined-evaluations/response-quality/response-consistency.mdx
+++ b/docs/predefined-evaluations/response-quality/response-consistency.mdx
@@ -1,6 +1,6 @@
 ---
 title: Response Consistency
-description: Grades how consistent the response is with the question asked as well as with the context provided.
+description: Assesses how consistent the response is with the question asked as well as with the context provided.
 ---
 
 Response Consistency is the measure of how well the generated response aligns with both the question asked and the context provided. 
@@ -32,7 +32,7 @@ res = eval_llm.evaluate(
     checks = [Evals.RESPONSE_CONSISTENCY]
 )
 ```
-<Info>By Default we are using GPT 3.5 Turbo. If you want to use some other model check out this [tutorial](https://github.com/uptrain-ai/uptrain/blob/main/examples/open_source_evaluator_tutorial.ipynb)</Info>
+<Info>By default, we are using GPT 3.5 Turbo for evaluations. If you want to use a different model, check out this [tutorial](https://github.com/uptrain-ai/uptrain/blob/main/examples/open_source_evaluator_tutorial.ipynb).</Info>
 
 Sample Response:
 ```json
