--- a/docs/predefined-evaluations/response-quality/response-validity.mdx
+++ b/docs/predefined-evaluations/response-quality/response-validity.mdx
@@ -1,6 +1,6 @@
 ---
 title: Response Validity
-description: Grades if the response generated is valid or not. A response is considered to be valid if it contains any information.
+description: Checks if the response generated is valid or not. A response is considered to be valid if it contains any information.
 
 ---
 
@@ -31,7 +31,7 @@ res = eval_llm.evaluate(
     checks = [Evals.VALID_RESPONSE]
 )
 ```
-<Info>By Default we are using GPT 3.5 Turbo. If you want to use some other model check out this [tutorial](https://github.com/uptrain-ai/uptrain/blob/main/examples/open_source_evaluator_tutorial.ipynb)</Info>
+<Info>By default, we are using GPT 3.5 Turbo for evaluations. If you want to use a different model, check out this [tutorial](https://github.com/uptrain-ai/uptrain/blob/main/examples/open_source_evaluator_tutorial.ipynb).</Info>
 
 Sample Response:
 ```json
