table added to evals overview

--- a/docs/predefined-evaluations/safeguarding/jailbreak.mdx
+++ b/docs/predefined-evaluations/safeguarding/jailbreak.mdx
@@ -1,6 +1,6 @@
 ---
 title: Jailbreak Detection
-description: Check if the user prompts to generate a response over potentially harmful or illegal behaviour
+description: Grades whether the user's prompt is an attempt to jailbreak (i.e. generate illegal or harmful responses)
 ---
 
 Jailbreak detection score is a metric to check if the user prompts to generate a response over potentially harmful or illegal behaviour. 
