--- a/docs/predefined-evaluations/custom-evals/custom-prompt-eval.mdx
+++ b/docs/predefined-evaluations/custom-evals/custom-prompt-eval.mdx
@@ -1,17 +1,14 @@
 ---
-title: Custom Prompt
-description: Grades how well the LLM adheres to a provided guideline when giving a response.
+title: Custom Prompts
+description: Allows you to create your own set of evaluations
 ---
 
-Guideline adherence measures the extent to which the generated response follows a given guideline, rule, or protocol. 
+Each LLM application has its unique needs and it is not possible to have a one-size-fits-all evaluation tool. 
 
-Given the complexity of LLMs, it is crucial to define certain guidelines, be it in terms of the structure of the output or the constraints on the content of the output or protocols on the decision-making capabilities of the LLMs.
+A sales assistant bot needs to be evaluated differently as compared to a calendar automation bot. 
 
+Custom prompts help you grade your model the way you want it.
 
-
-### GuidelineAdherence  ([Tutorial](https://github.com/uptrain-ai/uptrain/blob/main/examples/checks/custom/guideline_adherence.ipynb))
-
-Grades how well the LLM adheres to a provided guideline when giving a response.
 
 Parameters:
 - `prompt`:	Evaluation prompt used to generate the grade
@@ -23,10 +20,6 @@ Parameters:
 ### How to use it?
 
 ```python
-from uptrain import EvalLLM, GuidelineAdherence
-
-OPENAI_API_KEY = "sk-********************"  # Insert your OpenAI key here
-
 prompt = """
 You are an expert medical school professor specializing in grading students' answers to questions.
 You are grading the following question:
@@ -37,7 +30,10 @@ You are grading the following predicted answer:
 {response}
 """
 
+# Create a list of choices
 choices = ["Correct", "Correct but Incomplete", "Incorrect"]
+
+# Create scores for the choices
 choice_scores = [1.0, 0.5, 0.0]
 
 data = [{
@@ -80,11 +76,9 @@ Sample Response:
    }
 ]
 ```
-<Note>A higher guideline adherence score reflects that the generated response contains adheres to defined guideline.</Note>
-
 Here, we have evaluated the data according to the above mentioned prompt.
 
-The response though correct, does not answers the question completely according to the information provided in the context. 
+The response though seems correct, does not answers the question completely according to the information provided in the context. 
 
 <CardGroup cols={2}>
   <Card
