--- a/docs/predefined-evaluations/language-quality/fluency-and-coherence.mdx
+++ b/docs/predefined-evaluations/language-quality/fluency-and-coherence.mdx
@@ -1,15 +1,12 @@
 ---
 title: Language Features
-description: Checks whether the response has answered all the aspects of the question specified
+description: Grades the quality and effectiveness of language in a response, focusing on factors such as clarity, coherence, conciseness, and overall communication.
 ---
 
-Critique tone evaluation involves assessing the language model's output in terms of the tone used when following or deviating from guidelines. 
-
-It aims to ensure that the language model not only adheres to guidelines but also communicates its adherence to or deviation from the guideline in an appropriate and respectful manner.
+ Language feature score helps analyze how well the language used in a response conveys the intended message, whether it addresses the question or issue comprehensively, and if it is free from ambiguity or confusion.
 
 Columns required:
 - `response`: The response given by the model
-- `llm_persona`: The persona the LLM being assessed was exposed to follow
 
 ### How to use it?
 
