link updates in docs and tutorials

--- a/docs/predefined-evaluations/response-quality/response-validity.mdx
+++ b/docs/predefined-evaluations/response-quality/response-validity.mdx
@@ -57,7 +57,15 @@ We evaluate response validity by determining which of the following two cases ap
 * The given response does contain some information.
 * The given response does not contain any information.
 
-<CardGroup cols={1}>
+<CardGroup cols={2}>
+  <Card
+    title="Tutorial"
+    href="https://github.com/uptrain-ai/uptrain/blob/main/examples/checks/response_quality/validity.ipynb"
+    icon="github"
+    color="#808080"
+  >
+    Open this tutorial in GitHub
+  </Card>
   <Card
     title="Have Questions?"
     href="https://join.slack.com/t/uptraincommunity/shared_invite/zt-1yih3aojn-CEoR_gAh6PDSknhFmuaJeg"
