--- a/examples/checks/context_awareness/context_utlization.ipynb
+++ b/examples/checks/context_awareness/context_utlization.ipynb
@@ -5,7 +5,7 @@
    "id": "9602657f",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/uptrain-ai/uptrain/blob/main/examples/checks/context_awareness/response_completeness_wrt_context.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/uptrain-ai/uptrain/blob/main/examples/checks/context_awareness/context_utlization.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "id": "c2403e87-604e-44c6-8d9e-6c5806bc4cd7",
    "metadata": {},
    "source": [
-    "<h1 style=\"text-align: center;\">Evaluating Response Completeness WRT Context</h1>\n"
+    "<h1 style=\"text-align: center;\">Context Utilization</h1>\n"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "id": "2ef54d59-295e-4f15-a35f-33f4e86ecdd2",
    "metadata": {},
    "source": [
-    "**What is Response Completeness wrt context?**: Response Completeness with respect to context refers to the thoroughness with which a model addresses all relevant information within the context of a given question or task. It emphasizes the need for a response that not only accurately answers the question but also considers the broader context and its various dimensions.\n",
+    "**What is Context Utilization?**: Context Utilization refers to the thoroughness with which a model addresses all relevant information within the context of a given question or task. It emphasizes the need for a response that not only accurately answers the question but also considers the broader context and its various dimensions.\n",
     "\n",
     "In practical applications, such as customer support inquiries, a complete response should cover all aspects of the customer's query, taking into account specific details, potential follow-up questions, and any relevant contextual information. This ensures a more effective and satisfactory interaction with the user.\n",
     "\n",
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cases_with_complete_reponse_wrt_context = [\n",
+    "cases_with_utilized_context = [\n",
     "    {\n",
     "        \"question\": \"What are the key features of the latest smartphone model?\",\n",
     "        \"context\": \"The latest smartphone model, released in 2023, boasts advanced camera technology, a high-resolution display, and a powerful processor.\",\n",
@@ -105,7 +105,7 @@
     "    }\n",
     "]\n",
     "\n",
-    "cases_with_incomplete_reponse_wrt_context = [\n",
+    "cases_without_utilized_context = [\n",
     "    {\n",
     "        \"question\": \"What are the key features of the latest smartphone model?\",\n",
     "        \"context\": \"The latest smartphone model, released in 2023, boasts advanced camera technology, a high-resolution display, and a powerful processor.\",\n",
@@ -123,7 +123,7 @@
     "    }\n",
     "]\n",
     "\n",
-    "data = cases_with_complete_reponse_wrt_context + cases_with_incomplete_reponse_wrt_context"
+    "data = cases_with_utilized_context + cases_without_utilized_context"
    ]
   },
   {
@@ -236,7 +236,7 @@
    "id": "c15fbcf7",
    "metadata": {},
    "source": [
-    "### Sample with Complete Response wrt Context"
+    "### Sample with Utilized Context"
    ]
   },
   {
@@ -268,7 +268,7 @@
    "id": "2227a277",
    "metadata": {},
    "source": [
-    "### Sample with Incomplete Response wrt Context"
+    "### Sample without Utilized Context"
    ]
   },
   {
@@ -517,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
